# sniped

./: .gitignore  Makefile  README.md  docker-compose.yml  output.txt
docs/: search.md
pg/db_data/: postmaster.pid
pg/db_data/base/1/: 2619  2840  pg_internal.init
pg/db_data/base/16384/: 2619
pg/db_data/base/4/: 2619
pg/db_data/base/5/: pg_internal.init
pg/db_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs  streams.rs
server/src/twitch/: mod.rs  ttv.rs
server/src/youtube/: stuff.md  yt.rs
web/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
web/src/: App.tsx  GameCarousel.tsx  GamePage.tsx  Home.tsx  StreamCard.tsx  StreamGrid.tsx  main.tsx  types.ts  utils.ts
web/src/api/: client.ts
