[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
rocket = {version = "=0.5.0-rc.3", features = ["json"] }
# rocket_cors = "0.5.1"
rocket_cors = "0.6.0-alpha2"
scraper = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
